# itemwise

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SPEC.md  alembic.ini  azure.yaml  docker-compose.yml  fix_migration.py  init-db.sql  main.py  pyproject.toml  pytest.ini  start.sh
.beads/: issues.jsonl
.github/scripts/: ensure-postgres-ready.sh  preflight-azure-openai-identity.sh  preflight-postgres-network.sh
.github/workflows/: cd.yml  ci.yml  dependabot-automerge.yml  pr-staging.yml
.squad/: commit-msg.txt  decisions.md  routing.md  team.md
.squad/agents/jayne/: charter.md  history.md
.squad/agents/kaylee/: charter.md  history.md
.squad/agents/mal/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/simon/: charter.md  history.md
.squad/agents/wash/: charter.md  history.md
.squad/agents/zoe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/inbox/: jayne-login-fix.md  kaylee-db-resilience.md  kaylee-image-analysis-diagnosis.md  simon-github-environments.md  simon-health-probes.md  wash-error-feedback.md  (+2 more)
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-02-27T2135-squad-init-and-spec-audit.md  2026-02-28T000700Z-resilience.md  2026-02-28T000800Z-image-analysis-review.md  2026-03-02T010543Z-prod-verification-and-pr.md
.squad/orchestration-log/: 2026-02-27T2135-mal-spec-audit.md  2026-02-28T000700Z-kaylee.md  2026-02-28T000700Z-simon.md  2026-02-28T000700Z-wash.md  2026-02-28T000700Z-zoe.md  2026-02-28T000800Z-jayne-image-review.md  2026-02-28T000800Z-kaylee-image-review.md  2026-02-28T000800Z-mal-image-review.md  2026-02-28T000800Z-wash-image-review.md  2026-02-28T000800Z-zoe-image-review.md  2026-03-02T010543Z-simon.md  2026-03-02T010543Z-zoe.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_sharing_and_lots.py  29cb968156e8_initial_schema_with_inventory_items_and_.py  9b0a8afb6fae_add_expiration_date_to_item_lots.py  a1b2c3d4e5f6_add_deleted_at_to_inventory_items.py  a1b2c3d4e5f6_add_locations_and_update_embeddings.py  b2c3d4e5f6g7_add_cascade_delete_to_inventory_fks.py  b2c3d4e5f6g7_add_normalized_name_to_locations.py  c3d4e5f6g7h8_add_users_and_user_id.py  c3d4e5f6g7h8_fix_location_user_id_type.py  d4e5f6g7h8i9_update_vector_dimensions_384_to_1536.py
docs/: alerts.md  pr-staging-setup.md
frontend/: index.html  manifest.json  sw.js
frontend/js/: app.js  auth.js  chat.js  items.js  settings.js  state.js  utils.js
infra/: abbreviations.json  main.bicep  resources.bicep
scripts/: cleanup_e2e_users.py  deploy.ps1  setup-cd-oidc.sh
src/inventory_assistant/: server.py
src/itemwise/: __init__.py  ai_client.py  alembic_utils.py  api.py  auth.py  config.py  email_service.py  embeddings.py  server.py  utils.py
tests/: conftest.py  test_ai_client.py  test_ai_context.py  test_alembic_utils.py  test_api.py  test_auth.py  test_change_password.py  test_config.py  test_confirm_action.py  test_cross_inventory_auth.py  test_crud.py  test_csrf.py  test_e2e.py  test_email_feedback.py  test_embeddings.py  test_engine.py  test_expiration.py  test_health.py  test_image_analysis.py  test_lots.py  test_manual.py  test_models.py  test_password_reset.py  test_rate_limiting.py  test_server.py  test_sharing.py  test_soft_delete.py  test_utils.py
(+5 files in other folders)
