[project]
name = "itemwise"
version = "0.1.0"
description = "AI-powered freezer inventory management with MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "coverage[toml]>=7.4.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
inventory-server = "itemwise.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prek>=0.2.28",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*"]
ignore_errors = true
