[project]
name = "itemwise"
version = "0.1.0"
description = "AI-powered inventory management with MCP server and natural language search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "playwright>=1.58.0",
    "httpx>=0.28.1",
    "PyJWT>=2.0.0",
    "passlib>=1.7.4",
    "slowapi>=0.1.9",
    "bcrypt>=5.0.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-communication-email>=1.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "coverage[toml]>=7.4.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
itemwise-server = "itemwise.server:main"
itemwise-web = "itemwise.api:run_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "prek>=0.2.28",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top (needed for load_dotenv pattern)
    "W293",  # Blank line contains whitespace (common in docstrings)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow longer lines in tests
"src/itemwise/email_service.py" = ["E501"]  # HTML email templates have long lines

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*"]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # Skip assert warnings (used in app logic)
